--- a/src/react-app/styles.css
+++ b/src/react-app/styles.css
@@ -1,5 +1,3 @@
-@import url('https://rsms.me/inter/inter.css');
-
 html {
   font-family: 'Inter', sans-serif;
 }
@@ -18,7 +16,7 @@ body,
 }
 
 body {
-  background: #f0f0f0;
+  background: #000000;
 }
 
 a {
@@ -46,8 +44,9 @@ a {
 .label {
   margin: 0;
   font-size: 2.5em;
-  font-weight: 400;
+  font-weight: 800;
   letter-spacing: 0;
+  color: white;
 }
 
 .label::after {
@@ -58,10 +57,6 @@ a {
   font-size: 2.5em;
   display: inline-block;
   max-width: 500px;
-}
-
-.caption::after {
-  content: 'Open source developer collective for the creative space';
 }
 
 .button {
@@ -100,9 +95,7 @@ a {
 }
 
 @media (max-width: 800px) {
-  .caption::after {
-    content: 'OSS dev collective  for the creative space';
-  }
+  
   .label::after {
     content: 'l69l';
   }
@@ -125,14 +118,12 @@ a {
 }
 
 @media (max-width: 600px) {
-  .nav {
-    gap: 0.5em;
-  }
+ 
   .caption::after {
     content: 'OSS dev collective';
   }
   .container {
-    padding: 2em 2em 2em 2em;
-    gap: 2em;
+    padding: 1em 1em 1em 1em;
+    gap: 1em;
   }
 }
